refactor: update general class in style.css and add their in index.html

--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
           <nav class="header__nav nav">
             <ul class="nav__list  list-reset flex">
               <li class="nav__item">
-                <a href="#section-contact" class="nav__link">Contact</a>
+                <a href="#section-contact" class="nav__link link">Contact</a>
               </li>
               <li class="nav__item">
-                <a href="#section-about" class="nav__link">About me</a>
+                <a href="#section-about" class="nav__link link">About me</a>
               </li>
               <li class="nav__item">
-                <a href="#section-skills" class="nav__link">Skills</a>
+                <a href="#section-skills" class="nav__link link">Skills</a>
               </li>
               <li class="nav__item">
-                <a href="#section-projects" class="nav__link">My projects</a>
+                <a href="#section-projects" class="nav__link link">My projects</a>
               </li>
               <li class="nav__item">
-                <a href="#section-code" class="nav__link">My code</a>
+                <a href="#section-code" class="nav__link link">My code</a>
               </li>
               <li class="nav__item">
-                <a href="#section-education" class="nav__link">Education</a>
+                <a href="#section-education" class="nav__link link">Education</a>
               </li>
               <li class="nav__item">
-                <a href="#section-languages" class="nav__link">Languages</a>
+                <a href="#section-languages" class="nav__link link">Languages</a>
               </li>
             </ul>
           </nav>
@@ -61,7 +61,7 @@
           </div>
           <div class="col-lg-8 section-hero__right flex">
             <h1 class="section-hero__title title">Aleksandr Dmitriev</h1>
-            <span class="section-hero__descr">Junior Frontend Developer</span>
+            <span class="section-hero__descr descr">Junior Frontend Developer</span>
           </div>
         </div>
       </div>
@@ -73,23 +73,23 @@
             <h2 class="section-contact__title title">Contact</h2>
             <ul class="section-contact__list list-reset flex">
               <li class="section-contact__item section-contact__item--image-1">
-                <span class="section-contact__descr">Moscow, Russia</span>
+                <span class="section-contact__descr descr">Moscow, Russia</span>
               </li>
               <li class="section-contact__item section-contact__item--image-2">
-                <a href="tel:+79672393456" class="section-contact__link">+7 967 239 3456</a>
+                <a href="tel:+79672393456" class="section-contact__link link">+7 967 239 3456</a>
               </li>
               <li class="section-contact__item section-contact__item--image-3">
-                <a href="mailto:dmitan@bk.ru" class="section-contact__link">dmitan@bk.ru</a>
+                <a href="mailto:dmitan@bk.ru" class="section-contact__link link">dmitan@bk.ru</a>
               </li>
               <li class="section-contact__item section-contact__item--image-4">
-                <a href="https://t.me/Heinz_est1869" class="section-contact__link" target="_blank">@Heinz_est1869</a>
+                <a href="https://t.me/Heinz_est1869" class="section-contact__link link" target="_blank">@Heinz_est1869</a>
               </li>
               <li class="section-contact__item section-contact__item--image-5">
-                <a href="#" class="section-contact__link" target="_blank">DmitaN#5034</a>
+                <a href="#" class="section-contact__link link" target="_blank">DmitaN#5034</a>
               </li>
               <li class="section-contact__item section-contact__item--image-6">
-                <a href="https://www.linkedin.com/in/aleksandr-dmitriev-901a161aa/"
-                  class="section-contact__link" target="_blank">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/aleksandr-dmitriev-901a161aa/" class="section-contact__link link"
+                  target="_blank">LinkedIn</a>
               </li>
             </ul>
           </div>
@@ -101,7 +101,7 @@
         <div class="row">
           <div class="col-lg-12">
             <h2 class="section-about__title title">About me</h2>
-            <p class="section-about__descr">
+            <p class="section-about__descr descr">
               I&nbsp;have been in&nbsp;IT for more than 12&nbsp;years. I&nbsp;have leadership experience. I&nbsp;have
               experience in&nbsp;developing
               desktop
@@ -111,7 +111,7 @@
               motivates you to&nbsp;continue learning. I&nbsp;want to&nbsp;gain experience in&nbsp;development for
               European customers and companies.
             </p>
-            <p class="section-about__descr">
+            <p class="section-about__descr descr">
               I&nbsp;also practice Japanese martial arts, such as&nbsp;Judo and Iaido. I&nbsp;am a&nbsp;three-time
               champion of&nbsp;Russia in&nbsp;Jodo. I&nbsp;am a&nbsp;champion in&nbsp;team competitions at&nbsp;the
               Iaido Championship of&nbsp;Russia.
@@ -188,8 +188,8 @@
         <div class="row">
           <div class="col-lg-12">
             <h2 class="section-projects__title title">My projects</h2>
-            <p class="section-projects__descr">You can see more my project on
-              <a href="https://github.com/DmitaN/" class="section-projects__link" target="_blank">Github</a>
+            <p class="section-projects__descr descr">You can see more my project on
+              <a href="https://github.com/DmitaN/" class="section-projects__link link" target="_blank">Github</a>
             </p>
           </div>
           <div class="col-lg-12 section-projects__content">
@@ -197,13 +197,13 @@
               <li class="col-lg-4 section-projects__item section-projects__item--image-1">
                 <h3 class="section-projects__item-title">Laggona</h3>
                 <p class="section-projects__item-descr">Site for small company</p>
-                <a href="https://github.com/DmitaN/lagoona" class="section-projects__link" target="_blank">Laggona on
+                <a href="https://github.com/DmitaN/lagoona" class="section-projects__link link" target="_blank">Laggona on
                   github</a>
               </li>
               <li class="col-lg-4 section-projects__item section-projects__item--image-2">
                 <h3 class="section-projects__item-title">Evklid</h3>
                 <p class="section-projects__item-descr">Site for small company</p>
-                <a href="https://github.com/DmitaN/evklid" class="section-projects__link" target="_blank">Evklid on
+                <a href="https://github.com/DmitaN/evklid" class="section-projects__link link" target="_blank">Evklid on
                   github</a>
               </li>
             </ul>
@@ -236,11 +236,11 @@ burger.addEventListener('click',
         <div class="row">
           <div class="col-lg-12">
             <h2 class="section-education__title title">Education</h2>
-            <p class="section-education__descr">
+            <p class="section-education__descr descr">
               I&nbsp;graduated from the Ural State Mining University in&nbsp;Yekaterinburg with a&nbsp;degree
               in&nbsp;Automated Information Processing and Management Systems in&nbsp;2010.
             </p>
-            <p class="section-education__descr">
+            <p class="section-education__descr descr">
               I&nbsp;am continuing my&nbsp;training on&nbsp;the Skillbox platform as&nbsp;a&nbsp;frontend developer
               now.
               And I&rsquo;m also starting to&nbsp;study at&nbsp;RS&nbsp;School in&nbsp;the same direction
@@ -274,7 +274,7 @@ burger.addEventListener('click',
       <div class="row">
         <div class="col-lg-12 footer__content flex">
           <span class="footer__year">© 2022</span>
-          <a href="https://github.com/DmitaN/" class="footer__link" target="_blank">My GitHub</a>
+          <a href="https://github.com/DmitaN/" class="footer__link link" target="_blank">My GitHub</a>
           <a href="https://rs.school/js/" class="footer__link" target="_blank">
             <img src="assets/img/rs_school_js.svg" alt="footer_logo" class="footer__logo">
           </a>
