fix: change button type and add &nbsp; in tel number

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <div class="container header__container">
       <div class="row">
         <div class="col-lg-12 header__content flex">
-          <button class="header__burger btn-reset" aria-label="Бергер меню"></button>
+          <button class="header__burger btn-reset" aria-label="Бергер меню" type="button"></button>
           <a href="#" class="header__logo-link">
             <img src="assets/img/header/logo.svg" alt="Logo image" class="header__logo">
           </a>
           <nav class="header__nav nav">
-            <ul class="nav__list  list-reset flex">
+            <ul class="nav__list list-reset flex">
               <li class="nav__item">
                 <a href="#section-contact" class="nav__link link">Contact</a>
               </li>
@@ -76,13 +76,14 @@
                 <span class="section-contact__descr descr">Moscow, Russia</span>
               </li>
               <li class="section-contact__item section-contact__item--image-2">
-                <a href="tel:+79672393456" class="section-contact__link link">+7 967 239 3456</a>
+                <a href="tel:+79672393456" class="section-contact__link link">+7&nbsp;967&nbsp;239&nbsp;3456</a>
               </li>
               <li class="section-contact__item section-contact__item--image-3">
                 <a href="mailto:dmitan@bk.ru" class="section-contact__link link">dmitan@bk.ru</a>
               </li>
               <li class="section-contact__item section-contact__item--image-4">
-                <a href="https://t.me/Heinz_est1869" class="section-contact__link link" target="_blank">@Heinz_est1869</a>
+                <a href="https://t.me/Heinz_est1869" class="section-contact__link link"
+                  target="_blank">@Heinz_est1869</a>
               </li>
               <li class="section-contact__item section-contact__item--image-5">
                 <a href="#" class="section-contact__link link" target="_blank">DmitaN#5034</a>
@@ -197,7 +198,8 @@
               <li class="col-lg-4 section-projects__item section-projects__item--image-1">
                 <h3 class="section-projects__item-title">Laggona</h3>
                 <p class="section-projects__item-descr">Site for small company</p>
-                <a href="https://github.com/DmitaN/lagoona" class="section-projects__link link" target="_blank">Laggona on
+                <a href="https://github.com/DmitaN/lagoona" class="section-projects__link link" target="_blank">Laggona
+                  on
                   github</a>
               </li>
               <li class="col-lg-4 section-projects__item section-projects__item--image-2">
