--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </div>
           <div class="col-lg-8 section-hero__right flex">
             <h1 class="section-hero__title title">Aleksandr Dmitriev</h1>
-            <span class="section-hero__descr descr">Junior Frontend Developer</span>
+            <span class="section-hero__descr descr">JavaScript Frontend Developer</span>
           </div>
         </div>
       </div>
